--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,7 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
+@import 'fumadocs-ui/css/neutral.css';
+@import 'fumadocs-ui/css/preset.css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -60,6 +62,8 @@
   --border: oklch(0.9691 0.0093 286.22); /*#f4f4fb*/
   --white01: oklch(1 0 0 / 87.06%);
   --card: oklch(0.7243 0.1422 266.12); /* #020034 */
+  --sidebar-ring: oklch(0.708 0 0);
+  --sidebar-border: oklch(0.922 0 0);
 
   /* ======================= */
   --card-foreground: oklch(0.145 0 0);
@@ -82,8 +86,6 @@
   --sidebar-primary-foreground: oklch(0.985 0 0);
   --sidebar-accent: oklch(0.97 0 0);
   --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
 }
 
 .dark {
@@ -97,6 +99,8 @@
   --border: oklch(0.9691 0.0093 286.22); /*#f4f4fb*/
   --white01: oklch(1 0 0 / 87.06%);
   --card: oklch(0.7243 0.1422 266.12); /* #020034 */
+  --sidebar-ring: oklch(0.556 0 0);
+  --sidebar-border: oklch(1 0 0 / 10%);
   /* ======================= */
 
   --card-foreground: oklch(0.985 0 0);
@@ -119,8 +123,6 @@
   --sidebar-primary-foreground: oklch(0.985 0 0);
   --sidebar-accent: oklch(0.269 0 0);
   --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
 }
 
 @layer base {
@@ -203,7 +205,7 @@
     background: #ffffff;
     box-shadow: inset 6px 6px 12px rgba(121, 135, 176, 0.08),
       inset -8px -8px 30px rgba(121, 135, 176, 0.25);
-    border-radius: 50px;
+    border-radius: 30px;
   }
   .shadow-blue-glow {
     box-shadow: 0px 13px 24px rgba(47, 107, 255, 0.6),
